samples/_failures_safe/1761595721_d74188_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2572ba04.c: In function ‘main’:
./samples/SAFE/__tmp_2572ba04.c:161:9: error: expected expression at end of input
  161 |         double ratio = (1.0 - ((
      |         ^~~~~~
./samples/SAFE/__tmp_2572ba04.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2572ba04.c:161:9: error: expected declaration or statement at end of input
